# morla

./: .gitignore  ChangeLog  JAVASCRIPT  Makefile.am  NEWS  README  README.md  configure.ac  doap.rdf  morla  morla.1.in  morla.sh
docs/: Makefile.am  about.xml  error.xml  faq.xml  functions.xml  index.xml  links.xml  rdf.xml  references.xml  todo.xml  xslt.xslt
icons/: Makefile.am
modules/: Makefile.am  index.xml  test.c
po/: ChangeLog  POTFILES.in  it.po  morla.pot
src/: Makefile.am  about.c  blanknode.c  browser.c  checks.c  datatype.c  dialog.c  download.c  edit.c  editor.h  file.c  filechooser.c  gconf.c  graph.c  help.c  info.c  init.c  js.c  last.c  main.c  maker.c  merge.c  module.c  morla-module.h  morla.h  namespace.c  navigator.c  ntriples.c  preferences.c  query.c  rdf.c  rdfs.c  search.c  splash.c  template.c  textview.c  unredo.c  update.c
